// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders correctly with title 1`] = `
Array [
  <div
    className="sc-bdVaJa fjMOoW"
  >
    <a
      className="sc-bwzfXH ejWntc"
      href="/"
    >
      home
    </a>
    <a
      className="sc-bwzfXH ejWntc"
      href="/bio"
      partiallyActive={true}
    >
      bio
    </a>
    <a
      className="sc-bwzfXH ejWntc"
      href="/blog"
      partiallyActive={true}
    >
      blog
    </a>
  </div>,
  <div
    className="ui container sc-htpNat hBEajF"
  >
    <div
      className="sc-bxivhb bhJkLI"
    />
    <h1>
      Test
    </h1>
    <h2
      className="sc-ifAKCX gmXudU"
    >
      test
    </h2>
    <p>
      test
    </p>
  </div>,
]
`;

exports[`Layout renders correctly without title 1`] = `
Array [
  <div
    className="sc-bdVaJa fjMOoW"
  >
    <a
      className="sc-bwzfXH ejWntc"
      href="/"
    >
      home
    </a>
    <a
      className="sc-bwzfXH ejWntc"
      href="/bio"
      partiallyActive={true}
    >
      bio
    </a>
    <a
      className="sc-bwzfXH ejWntc"
      href="/blog"
      partiallyActive={true}
    >
      blog
    </a>
  </div>,
  <div
    className="ui container sc-htpNat hBEajF"
  >
    <div
      className="sc-bxivhb bhJkLI"
    />
    <p>
      test
    </p>
  </div>,
]
`;
